--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 			<dependency>
 				<groupId>edu.wisc.my.apps</groupId>
 				<artifactId>uw-frame</artifactId>
-				<version>2.5.2</version>
+				<version>2.5.3-SNAPSHOT</version>
 				<type>war</type>
 			</dependency>
 		</dependencies>
